2007-07-20  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* FormHandleTest.cs: Make a couple of classes public, so that other
	  tests can use them.
	* FormTest.cs: Added tests for #81969.

2007-07-20  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* ComboBoxTests.cs, ComboBoxTest.cs: Unified ComboBoxTest.cs and
	  ComboBoxTests.cs, deleted ComboBoxTests.cs

2007-07-18  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripTest.cs: One of my notworking tests slipped out.

2007-07-18  Jonathan Pobst  <monkey@jpobst.com>

	* ListBoxTest.cs, MenuStripTest.cs, ToolStripComboBoxTest.cs,
	ToolStripContentPanelTest.cs, ToolStripControlHostTest.cs,
	ToolStripDropDownTest.cs, ToolStripProgressBarTest.cs,
	ToolStripTest.cs: Sync up some local test additions.

2007-07-18  Jonathan Pobst  <monkey@jpobst.com>

	* ListControl.cs: Fix test that is failing on i586.

2007-07-17  Jonathan Pobst  <monkey@jpobst.com>

	* ContainerControlTest.cs: Add test for 2.0 AutoScaling.  It's
	marked NotWorking because it depends on fonts and DPI, but it
	can still be used to compare to .NET.

2007-07-16  Gert Driesen  <drieseng@users.sourceforge.net>

	* ComboBoxTest.cs: Added test for bug #82069.
	* ListControlTest.cs: Added tests for bug #81771.

2007-07-12  Jonathan Pobst  <monkey@jpobst.com>

	* ButtonTest.cs: Add test showing a NSE if Flat BorderColor is 
	transparent.

2007-07-09  Jonathan Pobst  <monkey@jpobst.com>

	* MessageTest.cs: Add tests for op_Equality and op_Inequality.

2007-07-09  Jonathan Pobst  <monkey@jpobst.com>

	* LinkAreaTest.cs: Add tests for op_Equality and op_Inequality.

2007-07-09  Jonathan Pobst  <monkey@jpobst.com>

	* ListBoxTest.cs: Add test for bug #80466.

2007-07-08  Jonathan Pobst  <monkey@jpobst.com>

	* TableLayoutTest.cs: Simplify and enable Gert's test for bug
	#82040.  Add a test for bug #82041.

2007-07-08  Gert Driesen  <drieseng@users.souceforge.net>

	* TableLayoutTest.cs: Added test for bug #82040.

2007-07-07  Jonathan Pobst  <monkey@jpobst.com>
